--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="sectionOne">
         <header>
             <div class="logo">
-                <img src="/images/Europe.png" alt="">
+                <img src="./images/Europe.png" alt="">
             </div>
             <div class="nav">
                 <ul>
@@ -107,27 +107,27 @@
                     <div class="indicatorLeft"></div>
                     <div class="countryContainer">
                         <div class="country slider" id="https://www.youtube.com/embed/D_aOgKnDRS4?autoplay=1&fs=1&mute=1&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&vq=hd1080">
-                            <img src="/images/italy.jpg" alt="">
+                            <img src="./images/italy.jpg" alt="">
                             <span>Italy</span>
                         </div>
                         <div class="country slider" id="https://www.youtube.com/embed/V2g4w36WGg8?autoplay=1&fs=1&mute=1&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&vq=hd1080">
-                            <img src="/images/croatia.jpg" alt="">
+                            <img src="./images/croatia.jpg" alt="">
                             <span>Croatia</span>
                         </div>
                         <div class="country slider" id="link">
-                            <img src="/images/grmany.jpg" alt="">
+                            <img src="./images/grmany.jpg" alt="">
                             <span>Germany</span>
                         </div>
                         <div class="country slider" id="link">
-                            <img src="/images/irland.jpg" alt="">
+                            <img src="./images/irland.jpg" alt="">
                             <span>Irland</span>
                         </div>
                         <div class="country slider" id="link">
-                            <img src="/images/portugal.jpg" alt="">
+                            <img src="./images/portugal.jpg" alt="">
                             <span>Portugal</span>
                         </div>
                         <div class="country slider" id="link">
-                            <img src="/images/slovenia.gif" alt="">
+                            <img src="./images/slovenia.gif" alt="">
                             <span>Slovenia</span>
                         </div>
                     </div>
@@ -160,27 +160,27 @@
             <div class="bottom">
                 <div class="countries">
                     <div class="country c1 c">
-                        <img src="/images/italy.jpg" alt="">
+                        <img src="./images/italy.jpg" alt="">
                         <span class="s"></span>
                     </div>
                     <div class="country c2 c">
-                        <img src="/images/croatia.jpg" alt="">
+                        <img src="./images/croatia.jpg" alt="">
                         <span class="s"></span>
                     </div>
                     <div class="country c3 c">
-                        <img src="/images/grmany.jpg" alt="">
+                        <img src="./images/grmany.jpg" alt="">
                         <span class="s"></span>
                     </div>
                     <div class="country c4 c">
-                        <img src="/images/irland.jpg" alt="">
+                        <img src="./images/irland.jpg" alt="">
                         <span class="s"></span>
                     </div>
                     <div class="country c5 c">
-                        <img src="/images/portugal.jpg" alt="">
+                        <img src="./images/portugal.jpg" alt="">
                         <span class="s"></span>
                     </div>
                     <div class="country c6 c">
-                        <img src="/images/slovenia.gif" alt="">
+                        <img src="./images/slovenia.gif" alt="">
                         <span class="s"></span>
                     </div>
                 </div>
