--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
         <h4>IIS Olivetti-Ivrea</h4>
     </footer>
 
-    <script src="/script/dinamicSlider.js"></script>
-    <script src="/script/angular.js"></script>
+    <script src="./script/dinamicSlider.js"></script>
+    <script src="./script/angular.js"></script>
 
 </body>
 </html>
