--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="countries">
                     <div class="indicatorLeft"></div>
                     <div class="countryContainer">
-                        <div class="country slider" id="https://www.youtube.com/embed/D_aOgKnDRS4?autoplay=1&fs=1&mute=1&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&vq=hd1080">
+                        <div class="country slider" id="https://www.youtube.com/embed/XB238lbRMEU?autoplay=1&fs=1&mute=1&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&vq=hd1080">
                             <img src="./images/italy.jpg" alt="">
                             <span>Italy</span>
                         </div>
@@ -225,7 +225,7 @@
         <div class="content">
             <div class="country">
                 <span>Italy</span>
-                <iframe src="https://www.youtube.com/embed/D_aOgKnDRS4?autoplay=1&fs=1&iv_load_policy=3&showinfo=0&mute=1&rel=0&cc_load_policy=0&start=0&end=0&vq=hd1080" frameborder="0"></iframe>
+                <iframe src="https://www.youtube.com/embed/XB238lbRMEU?autoplay=1&fs=1&iv_load_policy=3&showinfo=0&mute=1&rel=0&cc_load_policy=0&start=0&end=0&vq=hd1080" frameborder="0"></iframe>
             </div>
             <div class="country">
                 <span>Croatia</span>
